fix dropdown z-index

--- a/web/src/styles/components/commands.less
+++ b/web/src/styles/components/commands.less
@@ -1,6 +1,8 @@
 @import '../variables.less';
 
 header {
+  position: relative;
+  z-index: 30;
   box-shadow:
     0 0 0 1px rgba(16, 22, 26, 0.2),
     0 0 0 rgba(16, 22, 26, 0),
@@ -10,6 +12,10 @@ header {
 
   #version-chooser .bp3-button-text::before {
     content: 'React Native macOS v';
+  }
+
+  #version-chooser .bp3-button-text {
+    font-variant-numeric: tabular-nums;
   }
 
   @media (max-width: 980px) {
